--- a/style.css
+++ b/style.css
@@ -242,7 +242,7 @@ body.active{
     right: 10%;
     width: 60%;
 }
-@media screen and (min-device-width: 768px){
+@media screen and (min-device-width: 1000px){
     #board{
         margin: auto;
     }
@@ -269,7 +269,7 @@ body.active{
     }
 }
 @media screen and (orientation:landscape) and
-(min-device-width: 320px) and (max-device-width: 767px) {
+(max-device-width: 999px) {
     #toggle{
         position:relative;
         display:block;
